# stepcode

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  CTestConfig.cmake  ChangeLog  INSTALL  NEWS  README  README.md  appveyor.yml  configure  ctest_matrix.cmake  lcov.cmake  run_ctest.cmake
cmake/schema_scanner/: CMakeLists.txt  schemaScanner.c  schemaScanner.cc  schemaScanner.cmake
data/: CMakeLists.txt
data/STEPTools_merged_schema/: step_merged_cad_schema.exp
data/ap203e2/: ap203e2_mim_lf.exp
data/ap210e3/: ap210e3_wip1.41_mim_lf.exp
data/ap214e3/: AP214E3_2010.exp  CMakeLists.txt
data/ap227/: CMakeLists.txt
data/ap235/: AP235-aim-long.exp
data/ap239/: ap239_mim_lf.exp
data/ap240/: AP240_aim_lf.exp
data/ap242/: 242_n8324_mim_lf.exp
data/cd209/: part409cdts_wg3n2617mim_lf.exp
data/cd242/: 242_n2813_mim_lf.exp
data/ifc2x4/: IFC2X4_RC2.exp
data/ifc4/: IFC4.exp
data/wip210e3/: 210e3_v1_45_mim_lf.exp  210e3_wip_v1_41_mim_lf.exp
example/ap203min/: CMakeLists.txt  ap203min.cpp
example/ap203min/ExternalProjectBuild/: CMakeLists.txt
example/ap203min/ExternalProjectBuild/cmake/: External_STEPCode.cmake
include/cllazyfile/: CMakeLists.txt  headerSectionReader.h  instMgrHelper.h  lazyDataSectionReader.h  lazyFileReader.h  lazyInstMgr.h  lazyP21DataSectionReader.h  p21HeaderSectionReader.h  sectionReader.h
include/core/: CMakeLists.txt  ExpDict.h  Registry.h  STEPaggrBinary.h  STEPaggrEntity.h  STEPaggrEnum.h  STEPaggrGeneric.h  STEPaggrInt.h  STEPaggrReal.h  STEPaggrSelect.h  STEPaggrString.h  STEPaggregate.h  STEPattribute.h  STEPcomplex.h  STEPundefined.h  SubSuperIterators.h  aggrTypeDescriptor.h  attrDescriptor.h  complexSupport.h  create_Aggr.h  dispnode.h  dispnodelist.h  entityDescriptor.h  globalRule.h  instmgr.h  interfaceSpec.h  interfacedItem.h  inverseAttribute.h  mgrnode.h  mgrnodearray.h  mgrnodelist.h  read_func.h  schRename.h  sdai.h  sdaiApplication_instance.h  typeOrRuleVar.h  uniquenessRule.h  whereRule.h
src/base/: CMakeLists.txt  gdb_script_autoload.h  path2str.c  path2str.h  sc_benchmark.cc  sc_benchmark.h  sc_getopt.h  sc_memmgr.cc  sc_memmgr.h  sc_mkdir.c  sc_mkdir.h  sc_stdbool.h  sc_stdio.h  sc_strtoull.h  sc_trace_fprintf.c  sc_trace_fprintf.h  scl_memmgr.cc  scl_memmgr.h  scl_trace_fprintf.c  scl_trace_fprintf.h
src/base/judy/: CMakeLists.txt
src/base/judy/misc/: judy64n.c
src/base/judy/src/: judy.c  judy.h  judyL2Array.h  judyLArray.h  judyS2Array.h  judySArray.h
src/base/judy/test/: judyL2test.cc  judyLtest.cc  judyS2test.cc  judyStest.cc
src/cllazyfile/: CMakeLists.txt  current_function.hpp  headerSectionReader.h  instMgrHelper.h  judy.c  lazyDataSectionReader.cc  lazyDataSectionReader.h  lazyFileReader.cc  lazyFileReader.h  lazyInstMgr.cc  lazyInstMgr.h  lazyP21DataSectionReader.cc  lazyP21DataSectionReader.h  lazyRefs.h  lazyRefs.txt  lazyTypes.h  lazy_test.cc  lazy_thread_safety_test.cc  main.cc  p21HeaderSectionReader.cc  p21HeaderSectionReader.h  sectionReader.cc  sectionReader.h
src/clstepcore/: CMakeLists.txt  ExpDict.cc  ExpDict.h  ExpDict.h.s  ExpDict.inline.cc  InstMgr_thread_safety_test.cc  Registry.cc  Registry.h  Registry.inline.cc  Registry_thread_safety_test.cc  STEPaggrBinary.cc  STEPaggrBinary.h  STEPaggrEntity.cc  STEPaggrEntity.h  STEPaggrEnum.cc  STEPaggrEnum.h  STEPaggrGeneric.cc  STEPaggrGeneric.h  STEPaggrInt.cc  STEPaggrInt.h  STEPaggrReal.cc  STEPaggrReal.h  STEPaggrSelect.cc  STEPaggrSelect.h  STEPaggrString.cc  STEPaggrString.h  STEPaggregate.cc  STEPaggregate.h  STEPattribute.cc  STEPattribute.h  STEPattribute.inline.cc  STEPattributeList.cc  STEPattributeList.h  STEPcomplex.cc  STEPcomplex.h  STEPinvAttrList.cc  STEPinvAttrList.h  STEPundefined.cc  STEPundefined.h  SingleLinkList.cc  (+87 more)
src/clstepcore/test/: CMakeLists.txt  test_SupertypesIterator.cc  test_null_attr.cc  test_operators_SDAI_Select.cc  test_operators_STEPattribute.cc
src/clutils/: CMakeLists.txt  Str.cc  Str.h  dirobj.cc  dirobj.h  errordesc.cc  errordesc.h  gennode.cc  gennode.h  gennodearray.cc  gennodearray.h  gennodelist.cc  gennodelist.h  sc_hash.cc  sc_hash.h  sc_mutex.h  sc_thread.h  scl_char_str_list.cc  scl_char_str_list.h  scl_hash.cc  scl_hash.h  scl_string.cc
src/exp2python/python/: .gitignore  LICENSE  README.md  setup.cfg
src/exp2python/python/SCL/: AggregationDataTypes.py  BaseType.py  Builtin.py  ConstructedDataTypes.py  Model.py  Part21.py  (+9 more)
src/exppp/: CMakeLists.txt  exppp-main.c  exppp.c  pp.h  pretty_alg.c  pretty_case.c  pretty_entity.c  pretty_expr.c  pretty_express.c  pretty_func.c  pretty_loop.c  pretty_proc.c  pretty_ref.c  pretty_rule.c  pretty_schema.c  pretty_scope.c  pretty_scope.h  pretty_stmt.c  pretty_subtype.c  pretty_type.c  pretty_where.c
src/exppp/test/: 1.exp  CMakeLists.txt  assembly_structure_non_pretty_printed_mim_lf.exp  exppp_div_slash.cmake  exppp_lost_var.cmake  exppp_prob_func.exp  inverse_qualifiers.cmake  lost_qualifiers.cmake  lost_qualifiers.exp  test_breakLongStr.c  unique_qualifiers.cmake  unique_qualifiers.exp
src/express/: CMakeLists.txt  Changes  PARSER_REWRITE.txt  alg.c  alloc.c  caseitem.c  dict.c  entity.c  error.c  expparse.y  expparse.y~  expr.c  express.c  expscan.l  exptoks.h  factory.c  fedex.c  hash.c  hash_impl.h  info.c  lexact.c  lexsupport.c  lexsupport.h  libexpress-gdb-printers.py  linklist.c  memory.c  object.c  ordered_attrs.cc  resolve.c  resolve2.c  schema.c  scope.c  stmt.c  symbol.c  symbol_impl.h  symlink.c  token_type.h  type.c  variable.c  xgetopt.cc  (+2 more)
src/express/test/: CMakeLists.txt  cant_resolve.exp  driver.c  driver.h  fff.h  hash_names.txt  hash_test.c  libexpress_prob_func.exp  parser_test.c  print_attrs.c  print_schemas.c  scanner_test.c  test_expr.c  test_express.c  test_resolve.c  test_resolve2.c  test_schema.c  test_scope.c  test_type.c
test/cpp/schema_dependent/: CMakeLists.txt  binary_index_derived.cc  stepAttrListSegfault.cc
test/cpp/schema_specific/: CMakeLists.txt  aggregate_bound_runtime.cc  attribute.cc  inverse_attr1.cc  inverse_attr2.cc  inverse_attr3.cc  stepfile_rw_progress.cc
(+398 files in other folders)
